--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,6 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_video">Video</string>
-    <string name="menu_gallery">Gallery</string>
+    <string name="menu_calendar">Calendario</string>
     <string name="menu_slideshow">Slideshow</string>
 </resources>
