--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="menu_video">Video</string>
     <string name="menu_calendar">Calendario</string>
     <string name="menu_graphical">Grafico Lineal</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_maps">Mapa</string>
 </resources>
